--- a/index.html
+++ b/index.html
@@ -4740,19 +4740,19 @@ var $author$project$Main$questions_init = $elm$core$Array$fromList(
 			A2(
 			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Does their partner have HIV?'),
-			$elm$core$Maybe$Just(0)),
+			$elm$core$Maybe$Just(1)),
 			A2(
 			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Did they have a bacterial STI recently?'),
-			$elm$core$Maybe$Just(0)),
+			$elm$core$Maybe$Just(1)),
 			A2(
 			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Do they have a history of inconsistent or no condom use?'),
-			$elm$core$Maybe$Just(0)),
+			$elm$core$Maybe$Just(1)),
 			A2(
 			$author$project$Main$QuestionDependency,
-			$author$project$Main$Question('Does their partner have HIV?'),
-			$elm$core$Maybe$Just(1))
+			$author$project$Main$Question('Does their partner have HIV??'),
+			$elm$core$Maybe$Just(2))
 		]));
 var $author$project$Main$init = {
 	currentQuestion: A2($elm$core$Array$get, 0, $author$project$Main$questions_init),
