--- a/index.html
+++ b/index.html
@@ -5904,7 +5904,7 @@ var $author$project$Main$viewPrEPInfoPage = A2(
 							$elm$html$Html$img,
 							_List_fromArray(
 								[
-									$elm$html$Html$Attributes$src('../table.png'),
+									$elm$html$Html$Attributes$src('./table.png'),
 									$elm$html$Html$Attributes$width(800),
 									$elm$html$Html$Attributes$height(800)
 								]),
