--- a/index.html
+++ b/index.html
@@ -4727,10 +4727,6 @@ var $author$project$Main$questions_init = $elm$core$Array$fromList(
 		[
 			A2(
 			$author$project$Main$QuestionDependency,
-			$author$project$Main$Question('Should this patient receive HIV screening?'),
-			$elm$core$Maybe$Nothing),
-			A2(
-			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Have you had vaginal or anal sex in the past 6 months?'),
 			$elm$core$Maybe$Nothing),
 			A2(
@@ -4740,19 +4736,19 @@ var $author$project$Main$questions_init = $elm$core$Array$fromList(
 			A2(
 			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Does their partner have HIV?'),
-			$elm$core$Maybe$Just(1)),
+			$elm$core$Maybe$Just(0)),
 			A2(
 			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Did they have a bacterial STI recently?'),
-			$elm$core$Maybe$Just(1)),
+			$elm$core$Maybe$Just(0)),
 			A2(
 			$author$project$Main$QuestionDependency,
 			$author$project$Main$Question('Do they have a history of inconsistent or no condom use?'),
-			$elm$core$Maybe$Just(1)),
+			$elm$core$Maybe$Just(0)),
 			A2(
 			$author$project$Main$QuestionDependency,
-			$author$project$Main$Question('Does their partner have HIV??'),
-			$elm$core$Maybe$Just(2))
+			$author$project$Main$Question('Does their partner have HIV?'),
+			$elm$core$Maybe$Just(1))
 		]));
 var $author$project$Main$init = {
 	currentQuestion: A2($elm$core$Array$get, 0, $author$project$Main$questions_init),
@@ -5357,6 +5353,8 @@ var $elm$browser$Browser$sandbox = function (impl) {
 			view: impl.view
 		});
 };
+var $author$project$Main$CheckResult = {$: 'CheckResult'};
+var $author$project$Main$EndQuiz = {$: 'EndQuiz'};
 var $author$project$Main$NextQuestion = {$: 'NextQuestion'};
 var $author$project$Main$No = {$: 'No'};
 var $author$project$Main$PostQuiz = {$: 'PostQuiz'};
@@ -5554,30 +5552,57 @@ var $author$project$Main$checkIfAnswerIsYesById = F2(
 		}
 	});
 var $author$project$Main$determineResult = function (model) {
-	var maybe_q6 = A2($elm$core$Array$get, 6, model.pastAnswers);
-	var maybe_q5 = A2($elm$core$Array$get, 5, model.pastAnswers);
-	var maybe_q4 = A2($elm$core$Array$get, 4, model.pastAnswers);
-	var maybe_q3 = A2($elm$core$Array$get, 3, model.pastAnswers);
-	var maybe_q2 = A2($elm$core$Array$get, 2, model.pastAnswers);
-	var maybe_q1 = A2($elm$core$Array$get, 1, model.pastAnswers);
+	var maybe_q6 = A2($elm$core$Array$get, 5, model.pastAnswers);
+	var maybe_q5 = A2($elm$core$Array$get, 4, model.pastAnswers);
+	var maybe_q4 = A2($elm$core$Array$get, 3, model.pastAnswers);
+	var maybe_q3 = A2($elm$core$Array$get, 2, model.pastAnswers);
+	var maybe_q2 = A2($elm$core$Array$get, 1, model.pastAnswers);
+	var maybe_q1 = A2($elm$core$Array$get, 0, model.pastAnswers);
 	var _v0 = _List_fromArray(
 		[maybe_q1, maybe_q2, maybe_q3, maybe_q4, maybe_q5, maybe_q6]);
-	if ((((((((((((_v0.b && (_v0.a.$ === 'Just')) && _v0.b.b) && (_v0.b.a.$ === 'Just')) && _v0.b.b.b) && (_v0.b.b.a.$ === 'Just')) && _v0.b.b.b.b) && (_v0.b.b.b.a.$ === 'Just')) && _v0.b.b.b.b.b) && (_v0.b.b.b.b.a.$ === 'Just')) && _v0.b.b.b.b.b.b) && (_v0.b.b.b.b.b.a.$ === 'Just')) && (!_v0.b.b.b.b.b.b.b)) {
-		var q1 = _v0.a.a;
-		var _v1 = _v0.b;
-		var q2 = _v1.a.a;
-		var _v2 = _v1.b;
-		var q3 = _v2.a.a;
-		var _v3 = _v2.b;
-		var q4 = _v3.a.a;
-		var _v4 = _v3.b;
-		var q5 = _v4.a.a;
-		var _v5 = _v4.b;
-		var q6 = _v5.a.a;
-		return (_Utils_eq(q1.answer, $author$project$Main$No) && _Utils_eq(q2.answer, $author$project$Main$No)) ? $elm$core$Maybe$Just(false) : ((_Utils_eq(q1.answer, $author$project$Main$Yes) && _Utils_eq(q2.answer, $author$project$Main$Yes)) ? $elm$core$Maybe$Just(true) : ((_Utils_eq(q1.answer, $author$project$Main$Yes) && (_Utils_eq(q3.answer, $author$project$Main$Yes) || (_Utils_eq(q4.answer, $author$project$Main$Yes) || _Utils_eq(q5.answer, $author$project$Main$Yes)))) ? $elm$core$Maybe$Just(true) : ((_Utils_eq(q2.answer, $author$project$Main$Yes) && _Utils_eq(q6.answer, $author$project$Main$Yes)) ? $elm$core$Maybe$Just(true) : $elm$core$Maybe$Just(false))));
-	} else {
-		return $elm$core$Maybe$Nothing;
+	_v0$2:
+	while (true) {
+		if ((((_v0.b && (_v0.a.$ === 'Just')) && _v0.b.b) && (_v0.b.a.$ === 'Just')) && _v0.b.b.b) {
+			if (_v0.b.b.a.$ === 'Nothing') {
+				if ((((((_v0.b.b.b.b && (_v0.b.b.b.a.$ === 'Nothing')) && _v0.b.b.b.b.b) && (_v0.b.b.b.b.a.$ === 'Nothing')) && _v0.b.b.b.b.b.b) && (_v0.b.b.b.b.b.a.$ === 'Nothing')) && (!_v0.b.b.b.b.b.b.b)) {
+					var q1 = _v0.a.a;
+					var _v1 = _v0.b;
+					var q2 = _v1.a.a;
+					var _v2 = _v1.b;
+					var _v3 = _v2.a;
+					var _v4 = _v2.b;
+					var _v5 = _v4.a;
+					var _v6 = _v4.b;
+					var _v7 = _v6.a;
+					var _v8 = _v6.b;
+					var _v9 = _v8.a;
+					return (_Utils_eq(q1.answer, $author$project$Main$Yes) && _Utils_eq(q2.answer, $author$project$Main$Yes)) ? $elm$core$Maybe$Just(true) : $elm$core$Maybe$Just(false);
+				} else {
+					break _v0$2;
+				}
+			} else {
+				if ((((((_v0.b.b.b.b && (_v0.b.b.b.a.$ === 'Just')) && _v0.b.b.b.b.b) && (_v0.b.b.b.b.a.$ === 'Just')) && _v0.b.b.b.b.b.b) && (_v0.b.b.b.b.b.a.$ === 'Just')) && (!_v0.b.b.b.b.b.b.b)) {
+					var q1 = _v0.a.a;
+					var _v10 = _v0.b;
+					var q2 = _v10.a.a;
+					var _v11 = _v10.b;
+					var q3 = _v11.a.a;
+					var _v12 = _v11.b;
+					var q4 = _v12.a.a;
+					var _v13 = _v12.b;
+					var q5 = _v13.a.a;
+					var _v14 = _v13.b;
+					var q6 = _v14.a.a;
+					return (_Utils_eq(q1.answer, $author$project$Main$No) && _Utils_eq(q2.answer, $author$project$Main$No)) ? $elm$core$Maybe$Just(false) : ((_Utils_eq(q1.answer, $author$project$Main$Yes) && _Utils_eq(q2.answer, $author$project$Main$Yes)) ? $elm$core$Maybe$Just(true) : ((_Utils_eq(q1.answer, $author$project$Main$Yes) && (_Utils_eq(q3.answer, $author$project$Main$Yes) || (_Utils_eq(q4.answer, $author$project$Main$Yes) || _Utils_eq(q5.answer, $author$project$Main$Yes)))) ? $elm$core$Maybe$Just(true) : ((_Utils_eq(q2.answer, $author$project$Main$Yes) && _Utils_eq(q6.answer, $author$project$Main$Yes)) ? $elm$core$Maybe$Just(true) : $elm$core$Maybe$Just(false))));
+				} else {
+					break _v0$2;
+				}
+			}
+		} else {
+			break _v0$2;
+		}
 	}
+	return $elm$core$Maybe$Nothing;
 };
 var $author$project$Main$getNextQuestion = function (model) {
 	return A2($elm$core$Array$get, model.numQuestion + 1, model.questions);
@@ -5595,7 +5620,7 @@ var $author$project$Main$update = F2(
 							$author$project$Main$init,
 							{pageView: $author$project$Main$Quiz});
 					case 'AnswerYes':
-						var $temp$msg = $author$project$Main$NextQuestion,
+						var $temp$msg = $author$project$Main$CheckResult,
 							$temp$model = _Utils_update(
 							model,
 							{
@@ -5645,13 +5670,37 @@ var $author$project$Main$update = F2(
 						msg = $temp$msg;
 						model = $temp$model;
 						continue update;
-					default:
-						var _v2 = $author$project$Main$getNextQuestion(model);
-						if (_v2.$ === 'Just') {
-							var next_q = _v2.a;
-							var _v3 = next_q.id;
-							if (_v3.$ === 'Just') {
-								var id = _v3.a;
+					case 'CheckResult':
+						var maybe_result = $author$project$Main$determineResult(model);
+						if (maybe_result.$ === 'Just') {
+							var result = maybe_result.a;
+							if (result) {
+								var $temp$msg = $author$project$Main$EndQuiz,
+									$temp$model = model;
+								msg = $temp$msg;
+								model = $temp$model;
+								continue update;
+							} else {
+								var $temp$msg = $author$project$Main$NextQuestion,
+									$temp$model = model;
+								msg = $temp$msg;
+								model = $temp$model;
+								continue update;
+							}
+						} else {
+							var $temp$msg = $author$project$Main$NextQuestion,
+								$temp$model = model;
+							msg = $temp$msg;
+							model = $temp$model;
+							continue update;
+						}
+					case 'NextQuestion':
+						var _v3 = $author$project$Main$getNextQuestion(model);
+						if (_v3.$ === 'Just') {
+							var next_q = _v3.a;
+							var _v4 = next_q.id;
+							if (_v4.$ === 'Just') {
+								var id = _v4.a;
 								if (A2($author$project$Main$checkIfAnswerIsYesById, id, model.pastAnswers)) {
 									return _Utils_update(
 										model,
@@ -5688,6 +5737,14 @@ var $author$project$Main$update = F2(
 									result: $author$project$Main$determineResult(model)
 								});
 						}
+					default:
+						return _Utils_update(
+							model,
+							{
+								currentQuestion: $elm$core$Maybe$Nothing,
+								pageView: $author$project$Main$PostQuiz,
+								result: $author$project$Main$determineResult(model)
+							});
 				}
 			} else {
 				if (msg.$ === 'StartQuiz') {
@@ -5745,13 +5802,12 @@ var $author$project$Main$startQuizButton = function (txt) {
 					]))
 			]));
 };
-var $author$project$Main$viewHome = function (model) {
+var $author$project$Main$viewHome = function (_v0) {
 	return A2(
 		$elm$html$Html$div,
 		_List_Nil,
 		_List_fromArray(
 			[
-				$elm$html$Html$text('HOME'),
 				$author$project$Main$startQuizButton('Start')
 			]));
 };
@@ -5771,190 +5827,9 @@ var $elm$html$Html$Attributes$href = function (url) {
 		'href',
 		_VirtualDom_noJavaScriptUri(url));
 };
-var $author$project$Main$does_not_meet = 'This patient does not meet HIV PrEP eligibility.';
-var $author$project$Main$viewDoesNotMeetPrEPPage = A2(
-	$elm$html$Html$div,
-	_List_Nil,
-	_List_fromArray(
-		[
-			$elm$html$Html$text($author$project$Main$does_not_meet)
-		]));
 var $elm$html$Html$h2 = _VirtualDom_node('h2');
-var $elm$html$Html$h4 = _VirtualDom_node('h4');
-var $elm$html$Html$Attributes$height = function (n) {
-	return A2(
-		_VirtualDom_attribute,
-		'height',
-		$elm$core$String$fromInt(n));
-};
-var $elm$html$Html$img = _VirtualDom_node('img');
 var $elm$html$Html$li = _VirtualDom_node('li');
-var $elm$html$Html$ol = _VirtualDom_node('ol');
-var $elm$html$Html$p = _VirtualDom_node('p');
-var $elm$html$Html$Attributes$src = function (url) {
-	return A2(
-		$elm$html$Html$Attributes$stringProperty,
-		'src',
-		_VirtualDom_noJavaScriptOrHtmlUri(url));
-};
 var $elm$html$Html$ul = _VirtualDom_node('ul');
-var $elm$html$Html$Attributes$width = function (n) {
-	return A2(
-		_VirtualDom_attribute,
-		'width',
-		$elm$core$String$fromInt(n));
-};
-var $author$project$Main$viewPrEPInfoPage = A2(
-	$elm$html$Html$div,
-	_List_Nil,
-	_List_fromArray(
-		[
-			A2(
-			$elm$html$Html$h2,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$elm$html$Html$text('Guidelines for offering HIV PrEP:')
-				])),
-			A2(
-			$elm$html$Html$ol,
-			_List_Nil,
-			_List_fromArray(
-				[
-					A2(
-					$elm$html$Html$li,
-					_List_Nil,
-					_List_fromArray(
-						[
-							A2(
-							$elm$html$Html$h4,
-							_List_Nil,
-							_List_fromArray(
-								[
-									$elm$html$Html$text('This patient is eligible for PrEP')
-								])),
-							A2(
-							$elm$html$Html$p,
-							_List_Nil,
-							_List_fromArray(
-								[
-									$elm$html$Html$text('Prior to initiation of PrEP, the patient should have the following tests:')
-								])),
-							A2(
-							$elm$html$Html$ul,
-							_List_Nil,
-							_List_fromArray(
-								[
-									A2(
-									$elm$html$Html$li,
-									_List_Nil,
-									_List_fromArray(
-										[
-											$elm$html$Html$text('HIV Ab/Ag test to ensure HIV negative')
-										])),
-									A2(
-									$elm$html$Html$ul,
-									_List_Nil,
-									_List_fromArray(
-										[
-											A2(
-											$elm$html$Html$li,
-											_List_Nil,
-											_List_fromArray(
-												[
-													$elm$html$Html$text('If there\'s a concern for exposure in the past 4 weeks, include a test for RNA (viral load).')
-												]))
-										])),
-									A2(
-									$elm$html$Html$li,
-									_List_Nil,
-									_List_fromArray(
-										[
-											$elm$html$Html$text('BMP (for eGFR)')
-										])),
-									A2(
-									$elm$html$Html$li,
-									_List_Nil,
-									_List_fromArray(
-										[
-											$elm$html$Html$text('HBV')
-										])),
-									A2(
-									$elm$html$Html$li,
-									_List_Nil,
-									_List_fromArray(
-										[
-											$elm$html$Html$text('pregnancy')
-										]))
-								]))
-						])),
-					A2(
-					$elm$html$Html$li,
-					_List_Nil,
-					_List_fromArray(
-						[
-							A2(
-							$elm$html$Html$h4,
-							_List_Nil,
-							_List_fromArray(
-								[
-									$elm$html$Html$text('Available regimens:')
-								])),
-							A2(
-							$elm$html$Html$img,
-							_List_fromArray(
-								[
-									$elm$html$Html$Attributes$src('./table.png'),
-									$elm$html$Html$Attributes$width(800),
-									$elm$html$Html$Attributes$height(800)
-								]),
-							_List_Nil)
-						])),
-					A2(
-					$elm$html$Html$li,
-					_List_Nil,
-					_List_fromArray(
-						[
-							A2(
-							$elm$html$Html$h4,
-							_List_Nil,
-							_List_fromArray(
-								[
-									$elm$html$Html$text('Refer to infectious diseases for monitoring and refills. Regardless of regimen, the patient will need to follow up every 3 months')
-								]))
-						]))
-				]))
-		]));
-var $author$project$Main$viewResult = function (model) {
-	var maybe_res = $author$project$Main$determineResult(model);
-	if (maybe_res.$ === 'Just') {
-		var res = maybe_res.a;
-		return res ? $author$project$Main$viewPrEPInfoPage : $author$project$Main$viewDoesNotMeetPrEPPage;
-	} else {
-		return A2(
-			$elm$html$Html$div,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$elm$html$Html$text('There was an error')
-				]));
-	}
-};
-var $author$project$Main$showResult = function (model) {
-	var _v0 = model.result;
-	if (_v0.$ === 'Just') {
-		return $author$project$Main$viewResult(model);
-	} else {
-		return A2(
-			$elm$html$Html$div,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$elm$html$Html$text('Error in getting result!')
-				]));
-	}
-};
-var $elm$html$Html$Attributes$target = $elm$html$Html$Attributes$stringProperty('target');
 var $author$project$Main$showHIVScreen = A2(
 	$elm$html$Html$div,
 	_List_Nil,
@@ -6083,20 +5958,187 @@ var $author$project$Main$showHIVScreen = A2(
 						]))
 				]))
 		]));
-var $author$project$Main$viewHIVScreen = function (model) {
-	var _v0 = A2($elm$core$Array$get, 0, model.pastAnswers);
-	if (_v0.$ === 'Just') {
-		var q = _v0.a;
-		var _v1 = q.answer;
-		if (_v1.$ === 'Yes') {
-			return $author$project$Main$showHIVScreen;
-		} else {
-			return A2($elm$html$Html$div, _List_Nil, _List_Nil);
-		}
+var $author$project$Main$does_not_meet = 'This patient does not meet HIV PrEP eligibility.';
+var $author$project$Main$viewDoesNotMeetPrEPPage = A2(
+	$elm$html$Html$div,
+	_List_Nil,
+	_List_fromArray(
+		[
+			$elm$html$Html$text($author$project$Main$does_not_meet)
+		]));
+var $elm$html$Html$h4 = _VirtualDom_node('h4');
+var $elm$html$Html$Attributes$height = function (n) {
+	return A2(
+		_VirtualDom_attribute,
+		'height',
+		$elm$core$String$fromInt(n));
+};
+var $elm$html$Html$img = _VirtualDom_node('img');
+var $elm$html$Html$ol = _VirtualDom_node('ol');
+var $elm$html$Html$p = _VirtualDom_node('p');
+var $elm$html$Html$Attributes$src = function (url) {
+	return A2(
+		$elm$html$Html$Attributes$stringProperty,
+		'src',
+		_VirtualDom_noJavaScriptOrHtmlUri(url));
+};
+var $elm$html$Html$Attributes$width = function (n) {
+	return A2(
+		_VirtualDom_attribute,
+		'width',
+		$elm$core$String$fromInt(n));
+};
+var $author$project$Main$viewPrEPInfoPage = A2(
+	$elm$html$Html$div,
+	_List_Nil,
+	_List_fromArray(
+		[
+			A2(
+			$elm$html$Html$h2,
+			_List_Nil,
+			_List_fromArray(
+				[
+					$elm$html$Html$text('Guidelines for offering HIV PrEP:')
+				])),
+			A2(
+			$elm$html$Html$ol,
+			_List_Nil,
+			_List_fromArray(
+				[
+					A2(
+					$elm$html$Html$li,
+					_List_Nil,
+					_List_fromArray(
+						[
+							A2(
+							$elm$html$Html$h4,
+							_List_Nil,
+							_List_fromArray(
+								[
+									$elm$html$Html$text('This patient is eligible for PrEP')
+								])),
+							A2(
+							$elm$html$Html$p,
+							_List_Nil,
+							_List_fromArray(
+								[
+									$elm$html$Html$text('Prior to initiation of PrEP, the patient should have the following tests:')
+								])),
+							A2(
+							$elm$html$Html$ul,
+							_List_Nil,
+							_List_fromArray(
+								[
+									A2(
+									$elm$html$Html$li,
+									_List_Nil,
+									_List_fromArray(
+										[
+											$elm$html$Html$text('HIV Ab/Ag test to ensure HIV negative')
+										])),
+									A2(
+									$elm$html$Html$ul,
+									_List_Nil,
+									_List_fromArray(
+										[
+											A2(
+											$elm$html$Html$li,
+											_List_Nil,
+											_List_fromArray(
+												[
+													$elm$html$Html$text('If there\'s a concern for exposure in the past 4 weeks, include a test for RNA (viral load).')
+												]))
+										])),
+									A2(
+									$elm$html$Html$li,
+									_List_Nil,
+									_List_fromArray(
+										[
+											$elm$html$Html$text('BMP (for eGFR)')
+										])),
+									A2(
+									$elm$html$Html$li,
+									_List_Nil,
+									_List_fromArray(
+										[
+											$elm$html$Html$text('HBV')
+										])),
+									A2(
+									$elm$html$Html$li,
+									_List_Nil,
+									_List_fromArray(
+										[
+											$elm$html$Html$text('pregnancy')
+										]))
+								]))
+						])),
+					A2(
+					$elm$html$Html$li,
+					_List_Nil,
+					_List_fromArray(
+						[
+							A2(
+							$elm$html$Html$h4,
+							_List_Nil,
+							_List_fromArray(
+								[
+									$elm$html$Html$text('Available regimens:')
+								])),
+							A2(
+							$elm$html$Html$img,
+							_List_fromArray(
+								[
+									$elm$html$Html$Attributes$src('../table.png'),
+									$elm$html$Html$Attributes$width(800),
+									$elm$html$Html$Attributes$height(800)
+								]),
+							_List_Nil)
+						])),
+					A2(
+					$elm$html$Html$li,
+					_List_Nil,
+					_List_fromArray(
+						[
+							A2(
+							$elm$html$Html$h4,
+							_List_Nil,
+							_List_fromArray(
+								[
+									$elm$html$Html$text('Refer to infectious diseases for monitoring and refills. Regardless of regimen, the patient will need to follow up every 3 months')
+								]))
+						]))
+				]))
+		]));
+var $author$project$Main$viewResult = function (model) {
+	var maybe_res = $author$project$Main$determineResult(model);
+	if (maybe_res.$ === 'Just') {
+		var res = maybe_res.a;
+		return res ? $author$project$Main$viewPrEPInfoPage : $author$project$Main$viewDoesNotMeetPrEPPage;
 	} else {
-		return A2($elm$html$Html$div, _List_Nil, _List_Nil);
+		return A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					$elm$html$Html$text('There was an error')
+				]));
 	}
 };
+var $author$project$Main$showResult = function (model) {
+	var _v0 = model.result;
+	if (_v0.$ === 'Just') {
+		return $author$project$Main$viewResult(model);
+	} else {
+		return A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					$elm$html$Html$text('Error in getting result!')
+				]));
+	}
+};
+var $elm$html$Html$Attributes$target = $elm$html$Html$Attributes$stringProperty('target');
 var $author$project$Main$viewPostQuiz = function (model) {
 	return A2(
 		$elm$html$Html$div,
@@ -6116,7 +6158,7 @@ var $author$project$Main$viewPostQuiz = function (model) {
 						$elm$html$Html$text('See the CDC\'s risk estimator tool for more information')
 					])),
 				A2($elm$html$Html$hr, _List_Nil, _List_Nil),
-				$author$project$Main$viewHIVScreen(model),
+				$author$project$Main$showHIVScreen,
 				$author$project$Main$showResult(model)
 			]));
 };
